--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -3,7 +3,7 @@
 }
 
 .update-container{
-    padding-top: 10px;
+    padding-top: 15px;
     text-align: center;
 }
  
@@ -12,11 +12,11 @@
 }
 
 .button-inc{ 
-    margin: 15px;
+    margin: 15px 15px 0px 15px;
 }
 
 .button-dec{ 
-    margin: 15px;
+    margin: 15px 15px 0px 15px;
 }
 
 .main-container{     
@@ -28,8 +28,15 @@
     bottom: 0;
     left: 0;
     right: 0;
+
+    text-align: center;
 }
 
 .button-updt{ 
-    margin: 5px;
+    margin: 30px 15px 0px 15px;
+}
+
+.balance-container{ 
+    padding-top: 30px;
+    text-align: center;
 }
