--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -46,3 +46,33 @@
     padding-top: 30px;
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .main-container{     
+        margin: auto;
+        height: 60%; 
+        width: 90%; 
+        position: absolute;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+    }
+
+    .small-heading{ 
+        font-weight: 650;
+        font-size: 16px;
+        padding-top: 35px;
+    }
+
+    .big-heading{ 
+        font-weight: 700;
+        font-size: 25px;
+    }
+
+    .balance-text{ 
+        font-weight: 650;
+        font-size: 16px;
+    }
+  }
